--- a/01_stv.spravka.list.html
+++ b/01_stv.spravka.list.html
@@ -32,16 +32,16 @@
 		</nav>
 
 		<ul class="topper__profile">
-			<li><a class="js-login" href="#"><i class="icon icon-login symbol">v</i> Войти</a>
+			<li><a class="js-login" href="#"><i class="icon icon-login symbol">&#0119;</i> Войти</a>
 				<!-- BEGIN .loginpopup -->
 				<div class="loginpopup">
 					<div class="loginpopup__socials">
 						<h1 class="title">через соцсети</h1>
 						<ul>
-							<li class="socials__fb"><a href="#"><i class="icon icon-fb"></i></a></li>
-							<li class="socials__tw"><a href="#"><i class="icon icon-tw"></i></a></li>
-							<li class="socials__vk"><a href="#"><i class="icon icon-vk"></i></a></li>
-							<li class="socials__od"><a href="#"><i class="icon icon-od"></i></a></li>
+							<li class="socials__fb"><a href="#"><i class="icon icon-fb symbol">&#228;</i></a></li>
+							<li class="socials__tw"><a href="#"><i class="icon icon-tw symbol">&#229;</i></a></li>
+							<li class="socials__vk"><a href="#"><i class="icon icon-vk symbol">&#230;</i></a></li>
+							<li class="socials__od"><a href="#"><i class="icon icon-od symbol">&#233;</i></a></li>
 						</ul>
 					</div>
 					<form class="form">
@@ -106,7 +106,7 @@
 				</div>
 				<!-- /.header__links-popup -->
 			</li>
-			<li><a class=" js-maps-popup" href="#"><i class="icon symbol">&#0117;</i>Карта</a>
+			<li><a class=" js-maps-popup" href="#"><i class="icon icon-pin symbol">&#0117;</i>Карта</a>
 				<!-- BEGIN .header__links-popup -->
 				<div class="header__links-popup header__links-popup_mod  js-maps">
 					<div class="header__links-popup-wrap">
@@ -139,7 +139,7 @@
 									<div class="search">
 										<span class="sticker sticker_yellow">Автоаксессуары: 590 организаций</span>
 										<div class="accordion">
-											<span class="accordion__title js-accord"><i></i>Уточнить параметры поиска</span>
+											<span class="accordion__title js-accord"><i class="symbol">&#203;</i>Уточнить параметры поиска</span>
 											<div class="accordion__body js-accord-body">
 												<ul>
 													<li>
@@ -275,7 +275,7 @@
 					<!-- /.baron -->
 				</div>
 				<!-- /.catalog -->
-				<button class="sidebar-key is-active js-sidebar-key"><i></i></button>
+				<button class="sidebar-key is-active js-sidebar-key"><i class="symbol">&#212;</i></button>
 				<!-- BEGIN .footer -->
 				<footer class="footer">
 					<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
