--- a/14_stv_reg.html
+++ b/14_stv_reg.html
@@ -91,10 +91,10 @@
 			<div class="socials">
 				<h1 class="h1">Войти через соцсети</h1>
 				<ul>
-					<li class="socials__fb"><a href="#"><i class="icon icon-fb"></i>Фейсбук</a></li>
-					<li class="socials__tw"><a href="#"><i class="icon icon-tw"></i>Твиттер</a></li>
-					<li class="socials__vk"><a href="#"><i class="icon icon-vk"></i>Вконтакте</a></li>
-					<li class="socials__od"><a href="#"><i class="icon icon-od"></i>Одноклассники</a></li>
+					<li class="socials__fb"><a href="#"><i class="icon icon-fb symbol">&#228;</i>Фейсбук</a></li>
+					<li class="socials__tw"><a href="#"><i class="icon icon-tw symbol">&#229;</i>Твиттер</a></li>
+					<li class="socials__vk"><a href="#"><i class="icon icon-vk symbol">&#230;</i>Вконтакте</a></li>
+					<li class="socials__od"><a href="#"><i class="icon icon-od symbol">&#233;</i>Одноклассники</a></li>
 				</ul>
 			</div>
 			<!-- /.socials -->
