--- a/15_stv_reg2.html
+++ b/15_stv_reg2.html
@@ -62,6 +62,7 @@
 					<div class="form__line  formline__success">
 						<label class="form__label">Логин</label>
 						<div class="form__controls">
+							<i class="symbol icon icon-success">&#245;</i>
 							<input class="form__login" type="text" value="eteslov">
 							<span>@stv.ru</span>
 						</div>
@@ -69,8 +70,9 @@
 					<div class="form__line formline__error">
 						<label class="form__label">Пароль</label>
 						<div class="form__controls">
+							<i class="symbol icon icon-error">&#206;</i>
 							<input type="password" value="●●●●●●">
-							<div class="form__errorifno">Извините, но допустипо использовать только латинские знаки</div>
+							<div class="form__errorinfo">Извините, но допустипо использовать только латинские знаки</div>
 						</div>
 					</div>
 					<div class="form__line">
@@ -92,10 +94,10 @@
 			<div class="socials">
 				<h1 class="h1">Войти через соцсети</h1>
 				<ul>
-					<li class="socials__fb"><a href="#"><i class="icon icon-fb"></i>Фейсбук</a></li>
-					<li class="socials__tw"><a href="#"><i class="icon icon-tw"></i>Твиттер</a></li>
-					<li class="socials__vk"><a href="#"><i class="icon icon-vk"></i>Вконтакте</a></li>
-					<li class="socials__od"><a href="#"><i class="icon icon-od"></i>Одноклассники</a></li>
+					<li class="socials__fb"><a href="#"><i class="icon icon-fb symbol">&#228;</i>Фейсбук</a></li>
+					<li class="socials__tw"><a href="#"><i class="icon icon-tw symbol">&#229;</i>Твиттер</a></li>
+					<li class="socials__vk"><a href="#"><i class="icon icon-vk symbol">&#230;</i>Вконтакте</a></li>
+					<li class="socials__od"><a href="#"><i class="icon icon-od symbol">&#233;</i>Одноклассники</a></li>
 				</ul>
 			</div>
 			<!-- /.socials -->
