--- a/12_stv_login2.html
+++ b/12_stv_login2.html
@@ -50,6 +50,7 @@
 					<div class="form__line formline__error">
 						<label class="form__label">Логин</label>
 						<div class="form__controls">
+							<i class="symbol icon icon-error">&#206;</i>
 							<input type="text" value="eteslov">
 							<div class="form__errorifno">К сожалению, логин или пароль не верные</div>
 						</div>
@@ -57,6 +58,7 @@
 					<div class="form__line formline__error">
 						<label class="form__label" for="inputPassword">Пароль</label>
 						<div class="form__controls">
+							<i class="symbol icon icon-error">&#206;</i>
 							<input type="password" id="inputPassword"  value="●●●●●●">
 							<div class="form__errorifno">Попробуйте <a href="#">восстановить пароль</a></div>
 						</div>
@@ -76,10 +78,10 @@
 			<div class="socials">
 				<h1 class="h1">Войти через соцсети</h1>
 				<ul>
-					<li class="socials__fb"><a href="#"><i class="icon icon-fb"></i>Фейсбук</a></li>
-					<li class="socials__tw"><a href="#"><i class="icon icon-tw"></i>Твиттер</a></li>
-					<li class="socials__vk"><a href="#"><i class="icon icon-vk"></i>Вконтакте</a></li>
-					<li class="socials__od"><a href="#"><i class="icon icon-od"></i>Одноклассники</a></li>
+					<li class="socials__fb"><a href="#"><i class="icon icon-fb symbol">&#228;</i>Фейсбук</a></li>
+					<li class="socials__tw"><a href="#"><i class="icon icon-tw symbol">&#229;</i>Твиттер</a></li>
+					<li class="socials__vk"><a href="#"><i class="icon icon-vk symbol">&#230;</i>Вконтакте</a></li>
+					<li class="socials__od"><a href="#"><i class="icon icon-od symbol">&#233;</i>Одноклассники</a></li>
 				</ul>
 			</div>
 			<!-- /.socials -->
