--- a/01_stv.spravka.list.html
+++ b/01_stv.spravka.list.html
@@ -172,7 +172,7 @@
 															<div class="select">
 																<div class="select__text js-select">
 																	<span>пн</span>
-																	<i></i>
+																	<i class="symbol icon">&#203;</i>
 																</div>
 																<ul class="js-select-list">
 																	<li>Пн</li>
