--- a/stv.login.html
+++ b/stv.login.html
@@ -9,6 +9,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.mousewheel.js"></script>
 	<script src="js/jquery.jscrollpane.js"></script>
+	<script src="js/jquery.placeholder.js"></script>
 	<script src="js/common.js"></script>
 	<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
 </head>
@@ -41,7 +42,7 @@
 			</div>
 			<!-- /.auth__title -->
 			<!-- BEGIN .form -->
-			<form class="form">
+			<form class="form" onsubmit="$('[placeholder]').placeholder('clear');">
 				<div class="form__wrap">
 					<div class="form__line">
 						<label class="form__label">Логин</label>
@@ -60,7 +61,7 @@
 					</div>
 				</div>
 				<div class="form__btn">
-						<button type="submit" class="btn btn-inactive" disabled>Войти</button>
+						<button type="submit" class="btn btn-inactive">Войти</button>
 				</div>
 			</form>
 			<!-- /.form -->
