--- a/stv.reg2.html
+++ b/stv.reg2.html
@@ -9,6 +9,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.mousewheel.js"></script>
 	<script src="js/jquery.jscrollpane.js"></script>
+	<script src="js/jquery.placeholder.js"></script>
 	<script src="js/common.js"></script>
 	<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
 </head>
@@ -41,7 +42,7 @@
 			</div>
 			<!-- /.auth__title -->
 			<!-- BEGIN .form -->
-			<form class="form">
+			<form class="form" onsubmit="$('[placeholder]').placeholder('clear');">
 				<div class="form__wrap">
 					<div class="form__line">
 						<label class="form__label">Ваше имя</label>
