logout, favourite, etc.

--- a/stv.spravka.html
+++ b/stv.spravka.html
@@ -29,7 +29,7 @@
 					<li><a href="#">Автомобили</a></li>
 					<li><a href="#">Объявления</a></li>
 					<li class="active"><a href="#">Справочник</a></li>
-					<li><a href="#">Почта</a></li>
+					<li><a href="#"><span class="mark mark-white">5</span>Почта</a></li>
 					<li><a href="#">Городской форум</a></li>
 				</ul>
 			</div>
@@ -37,7 +37,10 @@
 			<!-- BEGIN .header__profile -->
 			<div class="header__profile">
 				<ul>
-					<li>
+					<li class="header__fav">
+						<a href="#"><i class="symbol icon icon-fav">&#0116;</i><span>Избранное — 2</span></a>
+					</li>
+					<li class="header__login">
 						<a href="#" class="js-login"><i class="symbol icon icon-login">&#0119;</i>Войти</a>
 						<!-- BEGIN .login-popup -->
 						<div class="login-popup">
@@ -70,6 +73,12 @@
 					</li>
 					<li>
 						<a href="#">Зарегистрироваться</a>
+					</li>
+					<li class="header__user">
+						<a href="#"><span class="mark mark-orange">23</span><i class="symbol icon icon-user">&#0046;</i>Мои объявления</a>
+					</li>
+					<li>
+						<a href="#"><i class="symbol icon icon-logout">&#0096;</i></a>
 					</li>
 				</ul>
 			</div>
