--- a/stv.spravka.list.html
+++ b/stv.spravka.list.html
@@ -29,7 +29,7 @@
 					<li><a href="#">Автомобили</a></li>
 					<li><a href="#">Объявления</a></li>
 					<li class="active"><a href="#">Справочник</a></li>
-					<li><a href="#"><span class="mark mark-white">5</span>Почта</a></li>
+					<li><a href="#"><span class="header__mail">Почта</span> <span class="mark mark-white">5</span></a></li>
 					<li><a href="#">Городской форум</a></li>
 				</ul>
 			</div>
