--- a/stv.login2.html
+++ b/stv.login2.html
@@ -3,26 +3,31 @@
 <!--[if gt IE 8]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>stv - login</title>
+	<title>Template</title>
 	<meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" media="screen" href="css/screen.css" >
 	<script src="js/jquery.js"></script>
-	<script src="js/baron.js"></script>
+	<script src="js/jquery.mousewheel.js"></script>
+	<script src="js/jquery.jscrollpane.js"></script>
+	<script src="js/jquery.placeholder.js"></script>
 	<script src="js/common.js"></script>
 	<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
 </head>
-<body class="alt">
-
+<body class="inner">
 <!-- BEGIN .out -->
 <div class="out">
-
-
 	<!-- BEGIN .header -->
-	<header class="header" role="banner">
-
-		<h1 class="header__logo"><a href="#" title="STV .Работа Ставрополь">STV .Работа Ставрополь</a></h1>
-
-	</header>
+	<div class="header">
+		<!-- BEGIN .logo -->
+		<h1 class="logo">
+			<a href="#" title="STV .Работа Ставрополь">
+				<div class="logo__name">stv</div>
+				<div class="logo__category">.работа</div>
+				<div class="logo__city">Ставрополь</div>
+			</a>
+		</h1>
+		<!-- /.logo -->
+	</div>
 	<!-- /.header -->
 
 	<div class="l">
@@ -36,18 +41,22 @@
 			</div>
 			<!-- /.auth__title -->
 			<!-- BEGIN .form -->
-			<form class="form">
+			<form class="form" onsubmit="$('[placeholder]').placeholder('clear');">
 				<div class="form__wrap">
-					<div class="form__line">
+					<div class="form__line formline__error">
 						<label class="form__label">Логин</label>
 						<div class="form__controls">
-							<input type="text">
+							<i class="symbol icon icon-error">&#206;</i>
+							<input type="text" value="eteslov">
+							<div class="form__errorinfo">К сожалению, логин или пароль не верные</div>
 						</div>
 					</div>
-					<div class="form__line">
+					<div class="form__line formline__error">
 						<label class="form__label" for="inputPassword">Пароль</label>
 						<div class="form__controls">
-							<input type="password" id="inputPassword" placeholder="">
+							<i class="symbol icon icon-error">&#206;</i>
+							<input type="password" id="inputPassword"  value="●●●●●●">
+							<div class="form__errorinfo">Попробуйте <a href="#">восстановить пароль</a></div>
 						</div>
 					</div>
 					<div class="form__line form__request">
@@ -55,7 +64,7 @@
 					</div>
 				</div>
 				<div class="form__btn">
-						<button type="submit" class="btn btn-inactive" disabled>Войти</button>
+						<button type="submit" class="btn btn-success">Войти</button>
 				</div>
 			</form>
 			<!-- /.form -->
@@ -74,20 +83,17 @@
 			<!-- /.socials -->
 		</div>
 	</div>
-
 	<div class="push"></div>
-
 </div>
 <!-- /.out -->
 
 <!-- BEGIN .footer -->
-<footer class="footer">
-	<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
-	<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
-	<a href="#" class="plus">16+</a>
-</footer>
+<div class="footer">
+	<p class="footer__copyright"><span>©</span> stv.ru, 2013</p>
+	<p><a href="#">Информационный портал<br> Ставрополя</a></p>
+	<span href="#" class="plus">16+</span>
+</div>
 <!-- /.footer -->
-
 
 </body>
 </html>
