--- a/stv.spravka.list.html
+++ b/stv.spravka.list.html
@@ -242,7 +242,7 @@
 											</div>
 										</li>
 									</ul>
-									<a href="#" class="btn btn-success">Показать</a>
+									<button class="btn btn-success">Показать</button>
 								</div>
 
 							</div>
